API - Gost-Blockungsergebnisse: fixed bugs and sonar issues